--- a/src/app/modules/admin/category-product/list/list.component.html
+++ b/src/app/modules/admin/category-product/list/list.component.html
@@ -28,16 +28,21 @@
             <table datatable [dtOptions]="dtOptions" class="table row-border hover w-full bg-white whitespace-nowrap">
                 <thead>
                     <tr>
-                        <th class="w-[100px]">จัดการ</th>
                         <th class="w-[10px]">ลำดับ</th>
                         <th>ชื่อย่อ</th>
                         <th>ชื่อ</th>
-                        <th>สร้างโดย</th>
+                        <!-- <th>สร้างโดย</th> -->
                         <th>วันที่สร้าง</th>
+                        <th class="w-[100px]">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
                     <tr *ngFor="let item of dataRow; let i = index">
+                        <td>{{ pages.begin + (i + 1) }}</td>
+                        <td>{{ item.prefix ? item.prefix : "-" }}</td>
+                        <td>{{ item.name ? item.name : "-" }}</td>
+                        <!-- <td>{{ item.create_by ? item.create_by : "-" }}</td> -->
+                        <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
                         <td>
                             <button mat-icon-button color="accent" (click)="editElement(item)">
                                 <mat-icon>edit</mat-icon>
@@ -46,11 +51,6 @@
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
-                        <td>{{ pages.begin + (i + 1) }}</td>
-                        <td>{{ item.prefix ? item.prefix : "-" }}</td>
-                        <td>{{ item.name ? item.name : "-" }}</td>
-                        <td>{{ item.create_by ? item.create_by : "-" }}</td>
-                        <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
                     </tr>
                 </tbody>
                 <tbody *ngIf="dataRow?.length == 0">
