--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -3,8 +3,8 @@
         <div class="w-full sm:w-auto py-8 px-4 sm:p-12 md:p-16">
             <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
                 <!-- Logo -->
-                <div class="w-32">
-                    <img src="assets/images/logo/kp-logo.png">
+                <div class="w-full">
+                    <img src="assets/images/logo/logo-kra-new.png">
                 </div>
 
                 <!-- Title -->
@@ -18,7 +18,8 @@
                 </div>
 
                 <!-- Alert -->
-                <fuse-alert class="mt-2 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type" [@shake]="alert.type === 'error'">
+                <fuse-alert class="mt-2 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false"
+                    [type]="alert.type" [@shake]="alert.type === 'error'">
                     {{alert.message}}
                 </fuse-alert>
 
@@ -40,14 +41,12 @@
                     <mat-form-field class="w-full">
                         <mat-label>Password</mat-label>
                         <input id="password" matInput type="password" [formControlName]="'password'" #passwordField>
-                        <button mat-icon-button type="button" (click)="passwordField.type === 'password' ? passwordField.type = 'text' : passwordField.type = 'password'" matSuffix>
-                            <mat-icon
-                                class="icon-size-5"
-                                *ngIf="passwordField.type === 'password'"
+                        <button mat-icon-button type="button"
+                            (click)="passwordField.type === 'password' ? passwordField.type = 'text' : passwordField.type = 'password'"
+                            matSuffix>
+                            <mat-icon class="icon-size-5" *ngIf="passwordField.type === 'password'"
                                 [svgIcon]="'heroicons_solid:eye'"></mat-icon>
-                            <mat-icon
-                                class="icon-size-5"
-                                *ngIf="passwordField.type === 'text'"
+                            <mat-icon class="icon-size-5" *ngIf="passwordField.type === 'text'"
                                 [svgIcon]="'heroicons_solid:eye-slash'"></mat-icon>
                         </button>
                         <mat-error>
@@ -55,23 +54,23 @@
                         </mat-error>
                     </mat-form-field>
 
-                    <!-- Actions -->
-                    <div class="inline-flex items-center justify-between w-full mt-1.5">
-                        <mat-checkbox class="-ml-2" [color]="'primary'" [formControlName]="'rememberMe'">
-                            Remember me
-                        </mat-checkbox>
-                        <a class="text-md font-medium text-primary-500 hover:underline" [routerLink]="['/forgot-password']">ลืมรหัสผ่าน
-                        </a>
-                    </div>
+                    <mat-form-field class="w-full">
+                        <mat-label>เลือกประเภท</mat-label>
+                        <mat-select [formControlName]="'type'">
+                            <mat-option *ngFor="let option of ['K', 'R', 'A']" [value]="option">
+                                {{ option }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                   
 
                     <!-- Submit button -->
-                    <button class="fuse-mat-button-large rounded-md w-full mt-6" mat-flat-button [color]="'primary'" [disabled]="signInForm.disabled" (click)="signIn()">
+                    <button class="fuse-mat-button-large rounded-md w-full mt-6 gradient-button"
+                        [disabled]="signInForm.disabled" (click)="signIn()">
                         <span *ngIf="!signInForm.disabled">
                             เข้าสู่ระบบ
                         </span>
-                        <mat-progress-spinner
-                            *ngIf="signInForm.disabled"
-                            [diameter]="24"
+                        <mat-progress-spinner *ngIf="signInForm.disabled" [diameter]="24"
                             [mode]="'indeterminate'"></mat-progress-spinner>
                     </button>
                 </form>
