--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -9,7 +9,7 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    รายการยี่ห้อ
+                    รายการเกม
                 </h2>
                 <div class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
@@ -30,7 +30,7 @@
                     <tr>
                         <th class="w-[100px]">จัดการ</th>
                         <th class="w-[10px]">ลำดับ</th>
-                        <th>ชื่อยี่ห้อ</th>
+                        <th>ชื่อเกม</th>
                         <th>รายละเอียด</th>
                         <th>รูป</th>
                         <th>สร้างโดย</th>
