--- a/src/app/modules/admin/category-item/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/category-item/form-dialog/form-dialog.component.html
@@ -6,13 +6,7 @@
                 <div class="flex flex-col mx-3 md:flex mb-6">
                     <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อย่อประเภทสินค้า</mat-label>
-                            <input matInput [placeholder]="'กรุณาระบุชื่อประเภทสินค้า'" formControlName="prefix">
-                        </mat-form-field>
-                    </div>
-                    <div class="md:w-full px-3">
-                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อประเภทสินค้า</mat-label>
+                            <mat-label>ชื่อประเภท</mat-label>
                             <input matInput [placeholder]="'กรุณาระบุชื่อประเภทสินค้า'" formControlName="name">
                         </mat-form-field>
                     </div>
