--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -33,7 +33,7 @@
                         <th class="w-[100px]">จัดการ</th>
                         <th class="w-[10px]">ลำดับ</th>
                         <th>รหัสสั่งซื้อ</th>
-                        <th>วันที่</th>
+                        <th>ชื่อ</th>
                         <th>ลูกค้า</th>
                         <th>ยอดรวม</th>
                         <th>สถานะ</th>
@@ -57,7 +57,7 @@
                         <td>{{ pages.begin + (i + 1) }}</td>
                         <td>{{ item.code ? item.code : "-" }}</td>
                         <td>{{ item.date | date : "dd-MM-yyyy" }}</td>
-                        <td>{{ item.client ? item.client.name : "-" }}</td>
+                        <td>{{ item.name}}</td>
                         <td>{{ item.total_price ? item.total_price : "-" }}</td>
                         <td>
                             <div *ngIf="item.status === 'Ordered'"
