--- a/src/app/modules/admin/game/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/game/form-dialog/form-dialog.component.html
@@ -1,19 +1,19 @@
 <div class="md:max-w-lg mx-auto">
-    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="!data">เพิ่มยี่ห้อ</h1>
-    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="data">แก้ไขยี่ห้อ</h1>
+    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="!data">เพิ่มเกม</h1>
+    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="data">แก้ไขเกม</h1>
     <div mat-dialog-content class="max-h-96 overflow-y-auto md:max-h-180">
         <form [formGroup]="addForm">
             <div class="flex-auto">
                 <div class="flex flex-col mx-3 md:flex mb-6">
                     <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อยี่ห้อ</mat-label>
-                            <input matInput [placeholder]="'กรุณาระบุชื่อยี่ห้อ'" formControlName="name">
+                            <mat-label>name</mat-label>
+                            <input matInput [placeholder]="'กรุณาระบุชื่อเกม'" formControlName="name">
                         </mat-form-field>
                     </div>
                     <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>รายละเอียด</mat-label>
+                            <mat-label>brand</mat-label>
                             <input matInput [placeholder]="'กรุณาระบุรายละเอียด'" formControlName="detail">
                         </mat-form-field>
                     </div>
