--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -56,7 +56,7 @@
 
                     <mat-form-field class="w-full">
                         <mat-label>เลือกประเภท</mat-label>
-                        <mat-select [formControlName]="'type'">
+                        <mat-select [formControlName]="'brand'">
                             <mat-option *ngFor="let option of ['K', 'R', 'A']" [value]="option">
                                 {{ option }}
                             </mat-option>
