--- a/src/app/modules/admin/category-item/edit-dialog/edit-dialog.component.html
+++ b/src/app/modules/admin/category-item/edit-dialog/edit-dialog.component.html
@@ -1,19 +1,14 @@
 <div class="md:max-w-lg mx-auto">
-    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5">แก้ไขประเภทอะไหล่</h1>
+    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5">แก้ไขประเภทรายการ</h1>
     <div mat-dialog-content class="max-h-96 overflow-y-auto md:max-h-180">
         <form [formGroup]="editForm">
             <div class="flex-auto">
                 <div class="flex flex-col mx-3 md:flex mb-6">
+    
                     <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อย่อประเภทอะไหล่</mat-label>
-                            <input matInput [placeholder]="'กรุณาระบุชื่อย่อประเภทอะไหล่'" formControlName="code">
-                        </mat-form-field>
-                    </div>
-                    <div class="md:w-full px-3">
-                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อประเภทอะไหล่</mat-label>
-                            <input matInput [placeholder]="'กรุณาระบุประเภทอะไหล่'" formControlName="name">
+                            <mat-label>ชื่อประเภทรายการ</mat-label>
+                            <input matInput [placeholder]="'กรุณาระบุประเภทรายการ'" formControlName="name">
                         </mat-form-field>
                     </div>
                     
