--- a/src/app/modules/admin/category-item/list/list.component.html
+++ b/src/app/modules/admin/category-item/list/list.component.html
@@ -28,11 +28,11 @@
             <table datatable [dtOptions]="dtOptions" class="table row-border hover w-full bg-white whitespace-nowrap">
                 <thead>
                     <tr>
-                        <th class="w-[10px]">ลำดับ</th>
-                        <th>ชื่อ</th>
-                        <!-- <th>สร้างโดย</th> -->
-                        <th>วันที่สร้าง</th>
-                        <th class="w-[100px]">จัดการ</th>
+                        <th class="w-[40px] text-left">ลำดับ</th>
+                        <th class="w-[250px] text-left">ชื่อ</th>
+                        <th class="text-left">วันที่สร้าง</th>
+                        <th class="text-left">วันที่แก้ไข</th>
+                        <th class="w-[100px] text-left">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
@@ -41,6 +41,7 @@
                         <td>{{ item.name ? item.name : "-" }}</td>
                         <!-- <td>{{ item.create_by ? item.create_by : "-" }}</td> -->
                         <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
+                        <td>{{ item.updated_at !== null ? (item.updated_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
                         <td>
                             <button mat-icon-button color="accent" (click)="editElement(item)">
                                 <mat-icon>edit</mat-icon>
