--- a/src/app/modules/admin/order/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/order/form-dialog/form-dialog.component.html
@@ -2,14 +2,11 @@
     <h1 mat-dialog-title class="text-xl font-semibold mb-4">เพิ่มสินค้า</h1>
     <div mat-dialog-content>
         <form [formGroup]="addForm">
-            <!-- <div class="mb-4">
-          <label for="no" class="block text-sm font-medium text-gray-700">No.</label>
-          <input type="text" id="no" class="mt-1 form-input rounded-md shadow-sm block w-full" formControlName="no" placeholder="No.">
-        </div> -->
+           
             <div class="mb-4">
-                <label for="code" class="block text-sm font-medium text-gray-700">รหัสสินค้า</label>
+                <label for="code" class="block text-sm font-medium text-gray-700">รหัสสินออเดอร์</label>
                 <input type="text" id="code" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="code" placeholder="รหัสสินค้า">
+                    formControlName="page_categorie_id" placeholder="รหัสสินค้า">
             </div>
             <div class="mb-4">
                 <label for="name" class="block text-sm font-medium text-gray-700">ชื่อ</label>
@@ -17,41 +14,47 @@
                     formControlName="name" placeholder="ชื่อสินค้า">
             </div>
             <div class="mb-4">
-                <label for="position_id" class="block text-sm font-medium text-gray-700">หน่วย</label>
-                <select id="position_id" class="mt-1 form-select rounded-md shadow-sm block w-full"
-                    formControlName="tax_type" >
-                    <option value="" disabled selected defaultSelected>เลือกประเภท</option>
-                    <option *ngFor="let item of uniType" [value]="item.id">{{item.name}}</option>
-                </select>
+                <label for="number" class="block text-sm font-medium text-gray-700">show_step</label>
+                <input type="number" min="1" max="10" id="number" class="mt-1 form-input rounded-md shadow-sm block w-full"
+                    formControlName="show_step" placeholder="ชื่อสินค้า">
+            </div>
+            <div class="mb-4">
+                <label for="name" class="block text-sm font-medium text-gray-700">ชื่อ</label>
+                <input type="text" id="name" class="mt-1 form-input rounded-md shadow-sm block w-full"
+                    formControlName="name" placeholder="ชื่อสินค้า">
             </div>
             <div class="mb-4">
                 <label for="position_id" class="block text-sm font-medium text-gray-700">ประเภท</label>
                 <select id="position_id" class="mt-1 form-select rounded-md shadow-sm block w-full"
-                    formControlName="tax_type" >
+                    formControlName="type" >
                     <option value="" disabled selected defaultSelected>เลือกประเภท</option>
                     <option *ngFor="let item of taxType" [value]="item.id">{{item.name}}</option>
                 </select>
             </div>
             <div class="mb-4">
-                <label for="price" class="block text-sm font-medium text-gray-700">ราคาขาย</label>
-                <input type="number" id="price" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="price" placeholder="ราคาขาย">
+                <label for="price" class="block text-sm font-medium text-gray-700">brand</label>
+                <input 
+                    type="text" 
+                    id="price" 
+                    class="mt-1 form-input rounded-md shadow-sm block w-full"
+                    formControlName="brand" 
+                    placeholder="brand"
+                >
             </div>
+            
+            
+            
             <div class="mb-4">
-                <label for="cost" class="block text-sm font-medium text-gray-700">ราคาทุน</label>
-                <input type="number" id="cost" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="cost" placeholder="ราคาทุน">
+                <label for="image" class="block text-sm font-medium text-gray-700">อัปโหลดรูป</label>
+                <input 
+                    type="file" 
+                    id="image" 
+                    class="mt-1 form-input rounded-md shadow-sm block w-full" 
+                    (change)="onFileSelected($event)" 
+                />
             </div>
-            <div class="mb-4">
-                <label for="description" class="block text-sm font-medium text-gray-700">รายละเอียด</label>
-                <input type="tel" id="description" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="description" placeholder="รายละเอียด">
-            </div>
-            <div class="mb-4">
-                <label for="remark" class="block text-sm font-medium text-gray-700">หมายเหตุ</label>
-                <textarea type="date" id="remark" placeholder="หมายเหตุ" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="remark"></textarea>
-            </div>
+            
+            
         </form>
     </div>
     <div mat-dialog-actions class="flex justify-end mt-4">
