--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -4,21 +4,19 @@
     <div class="absolute inset-x-0 bottom-0" *ngIf="isLoading">
         <mat-progress-bar [mode]="'indeterminate'"></mat-progress-bar>
     </div>
-    <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
+    <div class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
         <div class="flex-1 flemin-w-0">
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    รายการสั่งซื้อ
+                    รายการเกม
                 </h2>
                 <div class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
-                        <mat-icon svgIcon="heroicons_outline:plus-small"></mat-icon>
+                        <mat-icon>add</mat-icon>
                         &nbsp;
-                        เพิ่มคำสั่งซื้อ
+                        เพิ่ม
                     </button>
-
                 </div>
             </div>
         </div>
@@ -32,12 +30,11 @@
                     <tr>
                         <th class="w-[100px]">จัดการ</th>
                         <th class="w-[10px]">ลำดับ</th>
-                        <th>รหัสสั่งซื้อ</th>
-                        <th>ชื่อ</th>
-                        <th>ลูกค้า</th>
-                        <th>ยอดรวม</th>
-                        <th>สถานะ</th>
-                        <th>สร้างโดย</th>
+                        <th>ชื่อออเดอร์</th>
+                        <th>show_step</th>
+                        <th>รูป</th>
+                        <th>type</th>
+                        <th>brand</th>
                         <th>วันที่สร้าง</th>
                     </tr>
                 </thead>
@@ -47,38 +44,20 @@
                             <button mat-icon-button color="accent" (click)="editElement(item)">
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button mat-icon-button color="accent" (click)="deleteElement(item)">
+                            <button mat-icon-button color="accent" (click)="delete(item.id)">
                                 <mat-icon>delete</mat-icon>
-                            </button>
-                            <button mat-icon-button color="accent" (click)="downloadReport(item)">
-                                <mat-icon>print</mat-icon>
                             </button>
                         </td>
                         <td>{{ pages.begin + (i + 1) }}</td>
-                        <td>{{ item.code ? item.code : "-" }}</td>
-                        <td>{{ item.date | date : "dd-MM-yyyy" }}</td>
-                        <td>{{ item.name}}</td>
-                        <td>{{ item.total_price ? item.total_price : "-" }}</td>
-                        <td>
-                            <div *ngIf="item.status === 'Ordered'"
-                                class="bg-blue-200 p-1 rounded-md text-center text-blue-800 font-bold">
-                                กำลังดำเนินการ
-                            </div>
-                            <div *ngIf="item.status === 'Wait'"
-                                class="bg-yellow-200 p-1 rounded-md text-center text-yellow-800 font-bold">
-                                รอตรวจสอบ
-                            </div>
-                            <div *ngIf="item.status === 'Finish'"
-                                class="bg-green-200 p-1 rounded-md text-center text-green-800 font-bold text-center">
-                                เสร็จสิ้น
-                            </div>
-                            <div *ngIf="item.status === 'Repair'"
-                                class="bg-red-200 p-1 rounded-md text-center text-red-800 font-bold text-center">
-                                รออนุมัติซ่อม
-                            </div>
-                        </td>
+                        <td>{{ item.name ? item.name : "-" }}</td>
+                        <td>{{ item.show_step ? item.show_step : "-" }}</td>
+                        <td>{{ item.type ? item.type : "-" }}</td>
+                        <td>{{ item.brand ? item.brand : "-" }}</td>
+                        <td>  <button mat-icon-button color="accent" (click)="showPicture(item.image)">
+                            <mat-icon>image</mat-icon>
+                        </button></td>
                         <td>{{ item.create_by ? item.create_by : "-" }}</td>
-                        <td>{{ item.created_at | date : "dd-MM-yyyy hh:mm a " }}</td>
+                        <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
                     </tr>
                 </tbody>
                 <tbody *ngIf="dataRow?.length == 0">
