--- a/src/app/modules/admin/order/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/order/form-dialog/form-dialog.component.html
@@ -32,15 +32,16 @@
                 </select>
             </div>
             <div class="mb-4">
-                <label for="price" class="block text-sm font-medium text-gray-700">brand</label>
+                <label for="brand" class="block text-sm font-medium text-gray-700">Brand</label>
                 <input 
                     type="text" 
-                    id="price" 
+                    id="brand" 
                     class="mt-1 form-input rounded-md shadow-sm block w-full"
                     formControlName="brand" 
-                    placeholder="brand"
+                    placeholder="Brand"
                 >
             </div>
+            
             
             
             
