--- a/src/app/modules/admin/order/form/form.component.html
+++ b/src/app/modules/admin/order/form/form.component.html
@@ -6,7 +6,7 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    แก้ไขข้อมูลเกม
+                    แก้ไขข้อมูลแบนเนอร์
                 </h2>
             </div>
         </div>
@@ -19,13 +19,13 @@
                 [formGroup]="editForm">
                 <span
                     class="text-xl md:text-xl font-bold tracking-tight leading-7 sm:leading-10 truncate text-gray-500">
-                    ข้อมูลเกม
+                    ข้อมูลแบนเนอร์
                 </span>
                 <div class="-mx-3 md:flex mb-6">
 
                     <div class="md:w-1/2 px-3 mb-6 md:mb-0">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>ชื่อเกม</mat-label>
+                            <mat-label>ชื่อ</mat-label>
                             <input matInput formControlName="name">
                             <!-- <mat-hint>This is a hint text</mat-hint> -->
                         </mat-form-field>
@@ -33,7 +33,7 @@
 
                     <div class="md:w-full px-3">
                         <mat-form-field class="w-full">
-                            <mat-label>หมวดหมู่เกม</mat-label>
+                            <mat-label>หมวดหมู่แบนเนอร์</mat-label>
                             <mat-select formControlName="game_categorie_id">
                                 <mat-option *ngFor="let category of categories" [value]="category.id">
                                     {{ category.name }}
