--- a/src/app/modules/admin/category-game/list/list.component.html
+++ b/src/app/modules/admin/category-game/list/list.component.html
@@ -29,7 +29,7 @@
                 <thead>
                     <tr>
                         <th class="w-[40px] text-left">ลำดับ</th>
-                        <th class="w-[250px] text-left">ชื่อ Game</th>
+                        <th class="w-[250px] text-left">ชื่อ </th>
                         <th class="text-left">วันที่สร้าง</th>
                         <th class="text-left">วันที่แก้ไข</th>
                         <th class="w-[100px] text-left">จัดการ</th>
