--- a/src/app/modules/admin/order/form/form.component.html
+++ b/src/app/modules/admin/order/form/form.component.html
@@ -6,7 +6,7 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    แก้ไขข้อมูลแบนเนอร์
+                    แก้ไข Order
                 </h2>
             </div>
         </div>
@@ -19,7 +19,7 @@
                 [formGroup]="editForm">
                 <span
                     class="text-xl md:text-xl font-bold tracking-tight leading-7 sm:leading-10 truncate text-gray-500">
-                    ข้อมูลแบนเนอร์
+                    ข้อมูล Order
                 </span>
                 <div class="-mx-3 md:flex mb-6">
 
@@ -32,9 +32,9 @@
                     </div>
 
                     <div class="md:w-full px-3">
-                        <mat-form-field class="w-full">
-                            <mat-label>หมวดหมู่แบนเนอร์</mat-label>
-                            <mat-select formControlName="game_categorie_id">
+                        <mat-form-field class="w-full" [ngClass]="formFieldHelpers">
+                            <mat-label>หมวดหมู่</mat-label>
+                            <mat-select formControlName="page_categorie_id">
                                 <mat-option *ngFor="let category of categories" [value]="category.id">
                                     {{ category.name }}
                                 </mat-option>
