--- a/src/app/modules/admin/order/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/order/form-dialog/form-dialog.component.html
@@ -1,62 +1,67 @@
 <div class="md:max-w-lg mx-auto">
-    <h1 mat-dialog-title class="text-xl font-semibold mb-4">เพิ่มสินค้า</h1>
-    <div mat-dialog-content>
+    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="!data">เพิ่ม Order</h1>
+    <h1 mat-dialog-title class="text-xl font-semibold mb-4 ml-5" *ngIf="data">แก้ไข Order</h1>
+    <div mat-dialog-content class="max-h-96 overflow-y-auto md:max-h-180">
         <form [formGroup]="addForm">
-           
-            <div class="mb-4">
-                <label for="code" class="block text-sm font-medium text-gray-700">รหัสสินออเดอร์</label>
-                <input type="text" id="code" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="page_categorie_id" placeholder="รหัสสินค้า">
+            <div class="flex-auto">
+                <div class="flex flex-col mx-3 md:flex mb-6">
+                    <div class="md:w-full px-3">
+                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                            <mat-label>name</mat-label>
+                            <input matInput [placeholder]="'กรุณาระบุชื่อ Order'" formControlName="name">
+                        </mat-form-field>
+                    </div>
+
+                    <div class="md:w-full px-3">
+                        <mat-form-field class="w-full" [ngClass]="formFieldHelpers">
+                            <mat-label>หมวดหมู่</mat-label>
+                            <mat-select formControlName="game_categorie_id">
+                                <mat-option *ngFor="let category of categories" [value]="category.id">
+                                    {{ category.name }}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="md:w-full px-3">
+                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                            <mat-label>show_step</mat-label>
+                            <input matInput [placeholder]="'กรุณาระบุshow_step'" formControlName="show_step">
+                        </mat-form-field>
+                    </div>
+                    
+                    <div class="md:w-full px-3">
+                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                            <mat-label>brand</mat-label>
+                            <input matInput [placeholder]="'กรุณาระบุ Brand'" formControlName="brand" readonly>
+                        </mat-form-field>
+                    </div>
+                    <div class="md:w-full px-3" *ngIf="this.url_image">
+                        <div class="flex justify-center md:w-full px-3">
+                            <img class="object-cover h-44 w-auto border-2 border-gray-50 rounded-sm"
+                                src="{{this.url_image}}">
+                            <!-- <img  class="object-contain h-44 w-auto" src="assets/images/no_image.png"> -->
+                        </div>
+                    </div>
+                    
+                    <div class="items-center md:w-full px-3 mt-2">
+                        <ngx-dropzone (change)="onSelect($event)">
+                            <ngx-dropzone-label>เลือกรูป</ngx-dropzone-label>
+                            <div *ngFor="let f of files">
+                                <ngx-dropzone-image-preview [file]="f" [removable]="true"
+                                    (removed)="onRemove(f)"></ngx-dropzone-image-preview>
+                            </div>
+                        </ngx-dropzone>
+                    </div>
+                </div>
             </div>
-            <div class="mb-4">
-                <label for="name" class="block text-sm font-medium text-gray-700">ชื่อ</label>
-                <input type="text" id="name" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="name" placeholder="ชื่อสินค้า">
-            </div>
-            <div class="mb-4">
-                <label for="number" class="block text-sm font-medium text-gray-700">show_step</label>
-                <input type="number" min="1" max="10" id="number" class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="show_step" placeholder="ชื่อสินค้า">
-            </div>
-            <div class="mb-4">
-                <label for="position_id" class="block text-sm font-medium text-gray-700">ประเภท</label>
-                <select id="position_id" class="mt-1 form-select rounded-md shadow-sm block w-full"
-                    formControlName="type" >
-                    <option value="" disabled selected defaultSelected>เลือกประเภท</option>
-                    <option *ngFor="let item of taxType" [value]="item.id">{{item.name}}</option>
-                </select>
-            </div>
-            <div class="mb-4">
-                <label for="price" class="block text-sm font-medium text-gray-700">brand</label>
-                <input 
-                    type="text" 
-                    id="price" 
-                    class="mt-1 form-input rounded-md shadow-sm block w-full"
-                    formControlName="brand" 
-                    placeholder="brand"
-                >
-            </div>
-            
-            
-            
-            <div class="mb-4">
-                <label for="image" class="block text-sm font-medium text-gray-700">อัปโหลดรูป</label>
-                <input 
-                    type="file" 
-                    id="image" 
-                    class="mt-1 form-input rounded-md shadow-sm block w-full" 
-                    (change)="onFileSelected($event)" 
-                />
-            </div>
-            
-            
         </form>
     </div>
     <div mat-dialog-actions class="flex justify-end mt-4">
-        <button mat-button class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 ml-2"
-            (click)="onSaveClick()">บันทึก</button>
-        &nbsp;
-        <button mat-button class="px-4 py-2 bg-gray-300 text-gray-600 rounded hover:bg-gray-400"
-            (click)="onCancelClick()">ยกเลิก</button>
+        <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="onSaveClick()">
+            ตกลง
+        </button>
+        <button class="px-6 ml-3" mat-flat-button [color]="'warn'" (click)="onCancelClick()">
+            ยกเลิก
+        </button>
     </div>
 </div>
