--- a/src/app/modules/admin/game/edit/edit.component.html
+++ b/src/app/modules/admin/game/edit/edit.component.html
@@ -33,7 +33,7 @@
 
                     <div class="md:w-full px-3">
                         <mat-form-field class="w-full">
-                            <mat-label>หมวดหมู่เกม</mat-label>
+                            <mat-label>ประเภทเกม</mat-label>
                             <mat-select formControlName="game_categorie_id">
                                 <mat-option *ngFor="let category of categories" [value]="category.id">
                                     {{ category.name }}
